2021-12-06
* Added seqtk installer.

2021-12-03
* Defined a new feedback function "say" on bb_native library.

2021-12-02
* Environmental variables now go harcoded on .bashrc file

2021-12-01
* General structure and a simple installation script added.
* Added wy around to source environmental variable file in all scripts.