@@ -1,4 +1,5 @@
-2021-12-06
+2021-12-05
+* Added check dependencies script.
 * Added seqtk installer.
 
 2021-12-03
